--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Victor",
   "license": "ISC",
   "dependencies": {
+    "@ngrok/ngrok": "^1.4.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
